Fix spacing and list-style for validation summary box

--- a/sass/govuk/elements/forms/_form-validation.scss
+++ b/sass/govuk/elements/forms/_form-validation.scss
@@ -86,8 +86,10 @@
 
   .error-summary-list {
     padding-left: 0;
+    margin-bottom: 0;
 
     li {
+      list-style: none;
 
       @include media(">=tablet") {
         margin-bottom: 5px;
